# twitch-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  env_example  rustfmt.toml  unknown.csv
dict/: 321.csv  Apostrophe.txt  English_3000.csv  English_3000.txt  English_Default.txt  English_User.csv  Japanese_User.txt
src/: auth.rs.old  main.rs  nico.rs  tui.rs  twitch.rs  twitch.rs.old  voice_creation.rs  word_process.rs  yomi.rs
src/auth/: client.rs  config.rs  mod.rs  oauth.rs  refresh.rs  server.rs  store.rs
src/helix/: client.rs  mod.rs  user.rs
src/tui/: events.rs  mod.rs  state.rs
src/tui/ui/: chat.rs  help.rs  input.rs  mod.rs  utils.rs
src/twitch/: client.rs  handlers.rs  mod.rs  types.rs
web/: config.js  index.html  oauth_success.html  script.js  style.css
