[package]
name = "twitch_reader"
version = "0.2.0"
edition = "2024"

[dependencies]
twitch-irc = "5.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
trie-rs = "0.4.2"
ratatui = "0.30.0"
crossterm = "0.29.0"
twitch_oauth2 = { version = "0.17.1", features = ["reqwest", "all"] }
tiny_http = "0.12.0"
reqwest = "0.13.2"
open = "5.3.3"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"



