[package]
name = "twitch_reader"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
twitch_api = { version = "0.7.2", features = ["helix", "reqwest", "twitch_oauth2"] }
twitch-irc = "5.0.1"

dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
tiny_http = "0.12"
toml = "0.8"
crossterm = "0.29.0"
ratatui = "0.30.0"


